<resources>
    <string name="app_name">JustLightApp</string>
    <string name="welcome">JustLight</string>
    <string name="radio_user">Customer</string>
    <string name="radio_partner">Partner</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_save_profile">Save</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmPassword">Confirm Password</string>
    <string name="hint_fullName">Full Name</string>
    <string name="hint_contact">Contact No.</string>
    <string name="hint_emailId">Email Id</string>
    <string name="hint_address">Address</string>
    <string name="hint_search">Search</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_greenSolutions">Green Solutions</string>
    <string name="nav_authorizationRequest">Authorization Request</string>
    <string name="nav_orderHistory">Order History</string>
    <string name="nav_Invite">Invite</string>
    <string name="nav_helpAndFeedback">Help</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_rating">Rate Us</string>
    <string name="nav_logout">Logout</string>

    <!-- Toolbar titles when notification menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Green Energy Solutions</item>
        <item>Authorization Request</item>
        <item>Order History</item>
        <item>Invite</item>
        <item>Help</item>
        <item>Settings</item>
        <item>Rating</item>
        <item>Logout</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="home_fragment">Welcome To JustLight!</string>
    <string name="greenSolution_fragment">GreenSolution!</string>
    <string name="settings_fragment">Settings!</string>
    <string name="rating_fragment">Rate Us!</string>
    <string name="logout_fragment">LogOut!</string>
    <string name="faq_q1">Q.What is JustLight Technologies</string>
    <string name="faq_a1">A.Just Light Technology is a green building energy solutions provider. </string>
    <string name="faq_q2">Q.Why should we opt for JustLight </string>
    <string name="faq_a2">A.Our company utilize IoT system to achieve better energy management, providing solutions that cut down energy cost efficiently without compromising safety. </string>
    <string name="faq_q3">Q.I am unable to access green Solutions </string>
    <string name="faq_a3">A.Please register with JustLight Technologies </string>

    <string name="JustLIght">VideoTube</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>


    <string name="company">Just Light Technology Inc </string>
    <string name="address">46560 Fremont Blvd, Suit 105, Fremont, CA 94538 </string>
    <string name="contact">+1 (510) 488 3676 </string>
    <string name="email">contact@justlight.net </string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
