<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackground">

    <TextView
        android:id="@+id/textView32"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Frequesntly Asked Questions!"
        android:textAlignment="center"
        android:textColor="#ffff"
        android:textSize="29dp" />

    <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingLeft="20dp"
       android:paddingRight="20dp"
       android:paddingTop="20dp">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">
           <TextView
               android:layout_width="318dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_q1"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />

           <TextView
               android:id="@+id/textView33"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginLeft="10dp"
               android:text="@string/faq_a1"
               android:textColor="@color/white"
               android:textSize="18sp" />

           <TextView
               android:layout_marginTop="20dp"
               android:layout_width="314dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_q2"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />

           <TextView
               android:id="@+id/textView34"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginLeft="10dp"
               android:text="@string/faq_a2"
               android:textColor="@color/white"
               android:textSize="18sp" />


           <TextView
               android:id="@+id/textView12"
               android:layout_width="309dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="20dp"
               android:text="@string/faq_q3"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />


           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="327dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_a3"
               android:textColor="@color/white"
               android:textSize="18sp"/>

           <TextView
               android:id="@+id/textView13"
               android:layout_width="313dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="20dp"
               android:text="@string/faq_q1"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />

           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_a1"
               android:textColor="@color/white"
               android:textSize="18sp"/>

           <TextView
               android:id="@+id/textView14"
               android:layout_width="307dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="20dp"
               android:text="@string/faq_q2"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />

           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="327dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_a2"
               android:textColor="@color/white"
               android:textSize="18sp"/>

           <TextView
               android:layout_marginTop="20dp"
               android:layout_width="309dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_q3"
               android:textColor="@color/colorPrimaryDark"
               android:textSize="21sp"
               android:textStyle="bold" />


           <TextView
               android:layout_marginLeft="10dp"
               android:layout_width="329dp"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/faq_a3"
               android:textColor="@color/white"
               android:textSize="18sp"/>

       </LinearLayout>
   </ScrollView>
</LinearLayout>
