<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/windowBackground"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="61dp">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contact Us"
            android:textAlignment="center"
            android:textColor="#ffff"
            android:textSize="30dp" />

     </RelativeLayout>


    <TextView
        android:id="@+id/textView20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/company"
            android:textColor="#ffff"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="12dp"
            app:srcCompat="@mipmap/ic_launcher" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="69dp">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:text="@string/address"
            android:textColor="#ffff"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="26dp"
            app:srcCompat="@android:drawable/ic_dialog_map" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="80dp"
            android:text="@string/contact"
            android:textColor="#ffff"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="23dp"
            app:srcCompat="@android:drawable/sym_action_call" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="52dp">
    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="#ffff"
        android:textSize="20dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/imageView5"
        android:layout_marginStart="26dp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="23dp"
        app:srcCompat="@android:drawable/sym_action_email" />
</RelativeLayout>

</LinearLayout>